@@ -211,8 +211,8 @@ static NSString* ADDRESS_BOOK_FILE = @"~/Library/Application Support/iTerm/Addre
         [NSNumber numberWithInt:10],@"Transparency",
         @"xterm",@"Term Type",
         [@"~"  stringByExpandingTildeInPath],@"Directory",
-        [NSFont fontWithName:@"FreeMonoBold" size:13],@"Font",
-        [NSFont fontWithName:@"Osaka-Mono" size:14],@"NAFont",
+        [NSFont userFixedPitchFontOfSize:0],@"Font",
+        [NSFont userFixedPitchFontOfSize:0],@"NAFont",
         [NSNumber numberWithBool:false],@"AntiIdle",
         [NSNumber numberWithUnsignedInt:0],@"AICode",
         [NSNumber numberWithBool:true],@"AutoClose",
